--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ body {
 
 .right-panel {
     width: 85%;
-    padding: 20px;
+    padding: 5px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -63,7 +63,7 @@ body {
 img {
     width: auto;
     height: auto;
-    max-width: 80%;
+    max-width: 100%;
     max-height: 500px;
     aspect-ratio: 4 / 3;
     margin: 0 auto;
@@ -77,9 +77,10 @@ img {
     background-color: #000;
     z-index: 10;
     width: 100%;
-    padding: 10px;
+    padding: 5px;
     box-sizing: border-box;
     max-height: 500px;
+    min-height: 200px
     overflow: hidden;
     display: flex;
     justify-content: center;
