--- a/styles.css
+++ b/styles.css
@@ -23,12 +23,12 @@ body {
 }
 
 .large-text {
-    font-size: 19px; /* 큰 글씨 */
+    font-size: 14px; /* 큰 글씨 */
     font-weight: bold;
 }
 
 .small-text {
-    font-size: 10px; /* 작은 글씨 */
+    font-size: 8px; /* 작은 글씨 */
 }
 
 .content-wrapper {
@@ -49,6 +49,7 @@ body {
 }
 
 .right-panel {
+    width: 100%;
     padding: 5px;
     display: flex;
     flex-direction: column;
@@ -63,7 +64,7 @@ img {
     width: auto;
     height: auto;
     max-width: 100%;
-    max-height: 500px;
+    max-height: 400px;
     aspect-ratio: 4 / 3;
     margin: 0 auto;
     display: block;
@@ -78,7 +79,7 @@ img {
     width: 100%;
     padding: 5px;
     box-sizing: border-box;
-    max-height: 500px;
+    max-height: 400px;
     min-height: 200px
     overflow: hidden;
     display: flex;
@@ -100,7 +101,7 @@ img {
     padding: 5px;
     box-sizing: border-box;
     margin-bottom: 5px;
-    max-height: 500px;
+    max-height: 400px;
 }
 
 .report-content {
