--- a/styles.css
+++ b/styles.css
@@ -23,12 +23,12 @@ body {
 }
 
 .large-text {
-    font-size: 14px; /* 큰 글씨 */
+    font-size: 14px; 
     font-weight: bold;
 }
 
 .small-text {
-    font-size: 8px; /* 작은 글씨 */
+    font-size: 8px; 
 }
 
 .content-wrapper {
@@ -49,21 +49,21 @@ body {
 }
 
 .right-panel {
-    width: 100%;
+    width: 80%;
     padding: 5px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     height: 100%;
-    overflow-y: auto;
+    overflow-y: hidden; /* 전체 패널이 스크롤되지 않도록 설정 */
     box-sizing: border-box;
 }
 
 img {
     width: auto;
     height: auto;
-    max-width: 100%;
+    max-width: 90%; /* 이미지의 크기를 오른쪽 패널의 90%로 제한 */
     max-height: 300px;
     aspect-ratio: 4 / 3;
     margin: 0 auto;
@@ -80,7 +80,7 @@ img {
     padding: 5px;
     box-sizing: border-box;
     max-height: 300px;
-    min-height: 200px
+    min-height: 200px;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -88,7 +88,7 @@ img {
 
 .scrollable-section {
     flex-grow: 1;
-    overflow-y: auto;
+    overflow-y: auto; /* 스크롤 가능하도록 변경 */
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -109,10 +109,11 @@ img {
     padding: 10px;
     background-color: #000;
     color: #fff;
-    margin-top: 1px;
+    margin-top: 10px;
     box-sizing: border-box;
     white-space: pre-wrap;
-    line-height: 1.5; 
+    line-height: 1.5;
+    overflow-y: auto;
 }
 
 .ticker-list {
@@ -125,6 +126,11 @@ img {
     justify-content: space-between;
     padding: 2px 0;
     cursor: pointer;
+    color: cyan;
+}
+
+.ticker-item:hover {
+    background-color: #444; 
 }
 
 .sort-options {
@@ -141,18 +147,17 @@ img {
     width: 0;
 }
 
-/* Help icon 스타일 추가 */
 #helpIcon {
     cursor: pointer;
     font-size: 18px;
-    color: #00ff00; /* 아이콘 색상 설정 */
+    color: #00ff00; 
     position: absolute;
-    top: 10px; /* 상단에 고정 */
-    right: 10px; /* 오른쪽에 고정 */
+    top: 10px; 
+    right: 10px; 
     padding: 5px;
     transition: color 0.3s;
 }
 
 #helpIcon:hover {
-    color: #ff0000; /* 마우스 오버 시 색상 변경 */
+    color: #ff0000;
 }
