--- a/styles_p.css
+++ b/styles_p.css
@@ -49,6 +49,7 @@ body {
 }
 
 .right-panel {
+    width: 80%;
     padding: 5px;
     display: flex;
     flex-direction: column;
@@ -105,13 +106,13 @@ img {
 
 .report-content {
     width: 100%;
-    padding: 10px;
+    padding: 5px;
     background-color: #000;
     color: #fff;
     margin-top: 1px;
     box-sizing: border-box;
     white-space: pre-wrap;
-    line-height: 1.5; 
+    line-height: 1.2; 
 }
 
 .ticker-list {
